--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
   weight = 40
 
 
-[[menu.main]]
-  name = "Paypal-JS-JDK"
-  pageRef = "/paypalJsJDK"
-  weight = 50
+# [[menu.main]]
+#   name = "Paypal-JS-JDK"
+#   pageRef = "/paypalJsJDK"
+#   weight = 50
